--- a/src/sidepanel/index.css
+++ b/src/sidepanel/index.css
@@ -25,17 +25,23 @@
 body {
   min-width: 20rem;
   margin: 0;
+  overflow: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  scrollbar-color: transparent transparent;
+}
+
+body::-webkit-scrollbar {
+  display: none !important;
 }
 
 #app {
   height: 100vh;
-  overflow-y: auto;
+  overflow: auto;
   scrollbar-width: none;
-  scrollbar-color: transparent transparent;
-  -webkit-scrollbar-color: transparent transparent;
-  -webkit-scrollbar-width: none;
-  -webkit-scrollbar-height: none;
-  -webkit-scrollbar-track: none;
-  -webkit-scrollbar-thumb: none;
-  -webkit-scrollbar-corner: none;
+  -ms-overflow-style: none;
+}
+
+#app::-webkit-scrollbar {
+  display: none !important;
 }
